# QtFakeProcess

./: .gitignore  CMakeLists.txt  README.md  config.json
src/: main.cc
